--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,15 +10,8 @@
 <div id="content">
 	<form action="/signin/" method="post" name="form"> {% csrf_token %}
 		<center>
-		<h1>SEC General Assembly Meeting Attendance</h1>
-		<h2>Please swipe your hokie passport</h2>
-	<!--
-		<div class="fieldWrapper" style="height: 32pt; font-size: 24pt; width: 400px; text-align: center">
-			{{ form.idnum.errors }}
-			<label for="idnum"></label>
-			{{ form.idnum }}
-		</div>
-	-->
+		<h1>Ballroom Dance @ Virginia Tech Attendance</h1>
+		<h2>Please swipe your hokie passport (or enter phone number if not a student)</h2>
 		<input style="height: 32pt; font-size: 24pt; width: 400px; text-align: center" type="text" name="idnum">
 		<br>
 		<input type="submit" value="Submit"/>
