--- a/templates/signin/index.html
+++ b/templates/signin/index.html
@@ -10,7 +10,7 @@
 	<strong>VT PID (without @vt.edu): </strong><input type="text" name="pid"><br><br>
 	<strong>First Name: </strong><input type="text" name="firstname"><br><br>
 	<strong>Last Name: </strong><input type="text" name="lastname"><br><br>
-	<strong>Organization: </strong><select><option value="AUVT">AUVT</option></select>
+	<strong>How you heard about us: </strong><select><option value="Other">Other</option></select>
 	</center>
 	
 
