--- a/templates/signin_duplicate.html
+++ b/templates/signin_duplicate.html
@@ -8,7 +8,7 @@ function redirect() {
 </head>
 <body onLoad="setTimeout('redirect()', 1000)">
 	<center>
-	<h1>SEC General Assembly Meeting Attendance</h1>
+	<h1>Ballroom Dance @ Virginia Tech Attendance</h1>
 	<h2>You have already signed in today!</h2>	
 	</center>
 </body>
