--- a/templates/signin_duplicate.html
+++ b/templates/signin_duplicate.html
@@ -2,7 +2,7 @@
 <head>
 <script type="text/javascript">
 function redirect() {
-	window.location = "/"
+	window.location = "http://0.0.0.0:8081/"
 }
 </script>
 </head>
