--- a/templates/signin_success.html
+++ b/templates/signin_success.html
@@ -2,7 +2,7 @@
 <head>
 <script type="text/javascript">
 function redirect() {
-	window.location = "/"
+	window.location = "http://0.0.0.0:8081/
 }
 </script>
 </head>
@@ -12,4 +12,5 @@ function redirect() {
 	<h2>Check-in Successful!</h2>	
 	</center>
 </body>
+<a href="/">Home</a>
 </html>
